--- a/k8ts/deploy.yaml
+++ b/k8ts/deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: php-crud-deployment
+  namespace: phpsite
 spec:
   replicas: 2
   selector:
@@ -36,6 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: php-crud-service
+  namespace: phpsite
 spec:
   selector:
     app: php-crud-app
@@ -49,6 +51,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: database-deployment
+  namespace: phpsite
 spec:
   replicas: 2
   selector:
@@ -83,6 +86,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-service
+  namespace: phpsite
 spec:
   selector:
     app: database-app
