--- a/k8ts/volumes.yaml
+++ b/k8ts/volumes.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: php-crud-pvc
+  namespace: phpsite
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +14,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: database-pvc
+  namespace: phpsite
 spec:
   accessModes:
     - ReadWriteOnce
