--- a/k8ts/deploy.yaml
+++ b/k8ts/deploy.yaml
@@ -91,8 +91,8 @@ spec:
   selector:
     app: database-app
   ports:
-  - name: mysql
+  - name: mysqlS
     port: 3306
     targetPort: 3306
-  type: LoadBalancer
+  type: NodePort
 
