Upadte iac adicionando namespasce para site

--- a/k8ts/deploy.yaml
+++ b/k8ts/deploy.yaml
@@ -91,7 +91,7 @@ spec:
   selector:
     app: database-app
   ports:
-  - name: mysqlS
+  - name: mysql
     port: 3306
     targetPort: 3306
   type: NodePort
